Fixed vertical spacing on contact page except for mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -259,20 +259,20 @@ footer {
 /* Contact Page */
 .contact-container {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: auto 1fr;
   min-height: 100vh;
   width: 100%;
-  height: auto;
 }
 
 // Remove redundant styles from here that are in main when finished
 .contact {
   height: 100%;
-  display: flex; 
-  row-gap: 80px;
+  display: flex;
+  flex-wrap: wrap; 
   column-gap: 80px;
   justify-content: center;
   align-items: center;
+  padding: 30px 0;
 }
 
 
@@ -299,9 +299,9 @@ footer {
 
 
 .contact-svg {
-  width: 100%;
-  height: 100%;
-  max-width: 700px;
+  height: fit-content;
+  width: fit-content;
+  min-width: 700px;
 }
 
 @import "responsive";
